--- a/new-login-form.css
+++ b/new-login-form.css
@@ -31,6 +31,7 @@ input{
     font-size: large;
     background-color: white;
     border-radius: 5px;
+    border: #cccccc 1px solid;
 }
 label{
     font-family: IRYekan;
@@ -47,10 +48,11 @@ button{
     border-radius: 10px;
     width: 40%;
     background-color: green;
-    border: black 1px solid;
+    border: #ccc 1px solid;
     font-family: IRYekan;
     color: white;
     margin-left: 4px;
+    cursor: pointer;
 }
 .footer1{
     background-color: black;
@@ -58,4 +60,7 @@ button{
     font-family: IRYekan;
     width: 100%;
     text-align: center;
+}
+button:hover{
+    background-color: blue;
 }
